main/default/objects/Participant__c/fields/Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Date__c</fullName>
    <description>Date of Attendance</description>
    <label>Attendance Date</label>
    <type>DateTime</type>
</CustomField>