main/default/objects/Participant__c/fields/Default_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Member_Name__c</fullName>
    <formula>IF(ISBLANK(Member_Contact__r.FirstName),Member_Contact__r.Email, Member_Contact__r.FirstName)</formula>
    <label>Default Member Name</label>
    <type>Text</type>
</CustomField>