main/default/objects/Participant__c/fields/Event_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Formula__c</fullName>
    <formula>CASE(WEEKDAY(DATEVALUE(Event__r.End_Date_Time__c)),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
7, &quot;Saturday&quot;,
&quot;None&quot;)

&amp;
&quot;, &quot;
&amp;

CASE(MONTH(DATEVALUE(Event__r.End_Date_Time__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)

&amp;
&quot; &quot; 
&amp;

TEXT(DAY(DATEVALUE(Event__r.End_Date_Time__c)))

&amp;
&quot;, &quot; 
&amp;

TEXT(YEAR(DATEVALUE(Event__r.End_Date_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date Formula</label>
    <type>Text</type>
</CustomField>