main/default/objects/Participant__c/fields/Event_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_Time__c</fullName>
    <formula>Event__r.End_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date Time</label>
    <type>DateTime</type>
</CustomField>