main/default/objects/Participant__c/fields/Event_End_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Time_Formula__c</fullName>
    <formula>IF(
  OR(
    VALUE( MID( TEXT( Event__r.Start_Date_Time__c - (3/24)), 12, 2 ) ) = 0,
    VALUE( MID( TEXT(Event__r.Start_Date_Time__c - (3/24)), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( Event__r.Start_Date_Time__c - (3/24)), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( Event__r.Start_Date_Time__c - (3/24)), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( Event__r.Start_Date_Time__c - (3/24)), 15, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( Event__r.Start_Date_Time__c - (3/24)), 12, 2 ) ) &lt; 12,
  &quot; a.m.&quot;,
  &quot; p.m.&quot;
&amp; &quot; &quot; &amp;
Text(Event__r.Time_Zone__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Time Formula</label>
    <type>Text</type>
</CustomField>