main/default/objects/Participant__c/fields/Event_Full_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Full_Date__c</fullName>
    <description>Event Details (start date - end date)</description>
    <formula>Event__r.Event_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Full Date</label>
    <type>Text</type>
</CustomField>