main/default/objects/Participant__c/fields/Event_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Full_Time__c</fullName>
    <formula>Event__r.Event_Time_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Full Time</label>
    <type>Text</type>
</CustomField>