main/default/objects/Participant__c/fields/Event_Invitation_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitation_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Event Invitation Reminder Sent</description>
    <label>Event Invitation Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>