main/default/objects/Participant__c/fields/Event_Invite_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Event_Invite_Welcome_Message__c</fullName>
    <formula>Event__r.Invite_Welcome_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Invite Welcome Message</label>
    <type>Text</type>
</CustomField>