main/default/objects/Participant__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <formula>HYPERLINK(Event__r.Event_Page_URL__c  + &apos;&amp;pm=&apos; + Name, Event__r.Event_Page_URL__c  + &apos;&amp;pm=&apos; + Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personalized Event URL</label>
    <type>Text</type>
</CustomField>