main/default/objects/Participant__c/fields/Event_Name_Len__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_Len__c</fullName>
    <formula>(LEN(Event__r.Name)+8)*8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name Len</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>