main/default/objects/Participant__c/fields/Event_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Page_URL__c</fullName>
    <formula>Event__r.Event_Page_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>