main/default/objects/Participant__c/fields/Event_Register_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Register_Page_URL__c</fullName>
    <formula>Event__r.Event_Register_Page_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Register Page URL</label>
    <type>Text</type>
</CustomField>