main/default/objects/Participant__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <label>Event Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>