main/default/objects/Participant__c/fields/Event_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtitle__c</fullName>
    <formula>Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Subtitle</label>
    <type>Text</type>
</CustomField>