main/default/objects/Participant__c/fields/Invitation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Invitation Date</description>
    <label>Invitation Date</label>
    <type>DateTime</type>
</CustomField>