main/default/objects/Participant__c/fields/Member_Contact__c.field-meta.xml
<CustomField>
    <fullName>Member_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Event_Members</relationshipName>
    <type>Lookup</type>
</CustomField>