main/default/objects/Participant__c/fields/Member_Lead__c.field-meta.xml
<CustomField>
    <fullName>Member_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Event_Members</relationshipName>
    <type>Lookup</type>
</CustomField>