main/default/objects/Participant__c/fields/Navigator_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Page_URL__c</fullName>
    <label>Navigator Page URL</label>
    <type>Url</type>
</CustomField>