main/default/objects/Participant__c/fields/Process_from_Event_Page__c.field-meta.xml
<CustomField>
    <fullName>Process_from_Event_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checker used for guest registration to avoid email duplicates</description>
    <label>Process from Event Page</label>
    <type>Checkbox</type>
</CustomField>