main/default/objects/Participant__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Holds the Rank for each Participant</description>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSgt</fullName>
            </value>
            <value>
                <fullName>SSgt</fullName>
            </value>
            <value>
                <fullName>Capt</fullName>
            </value>
            <value>
                <fullName>HM1</fullName>
            </value>
            <value>
                <fullName>HM2</fullName>
            </value>
            <value>
                <fullName>Lt Col</fullName>
            </value>
            <value>
                <fullName>Maj</fullName>
            </value>
            <value>
                <fullName>SrA</fullName>
            </value>
            <value>
                <fullName>Lt</fullName>
            </value>
            <value>
                <fullName>CIV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>