main/default/objects/Participant__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Registration Date</description>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>