main/default/objects/Participant__c/fields/Registration_Reminder_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Registration_Reminder_Welcome_Message__c</fullName>
    <formula>Event__r.Registration_Reminder_Welcome_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Reminder Welcome Message</label>
    <type>Text</type>
</CustomField>