main/default/objects/Participant__c/fields/Send_Event_Registration_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Event_Registration_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Event Registration Notification</label>
    <type>Checkbox</type>
</CustomField>