main/default/objects/Participant__c/fields/Session_Attendance_URL__c.field-meta.xml
<CustomField>
    <fullName>Session_Attendance_URL__c</fullName>
    <formula>SUBSTITUTE(Event__r.Event_Page_URL__c, &apos;events&apos;, &apos;sessions&apos;)     + &apos;&amp;pm=&apos; +  Name + &apos;&amp;email=&apos; +  Member_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Attendance URL</label>
    <type>Text</type>
</CustomField>