main/default/objects/Participant__c/fields/Session_Modified__c.field-meta.xml
<CustomField>
    <fullName>Session_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag that checks if Session is modified</description>
    <label>Session Modified</label>
    <type>Checkbox</type>
</CustomField>