main/default/objects/Participant__c/fields/Survey_Participant_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Participant_URL__c</fullName>
    <description>Generates a URL that is sent via email for when a participant has to answer a survey</description>
    <formula>Event__r.Event_Page_URL__c + &quot;&amp;pm=&quot; + Name + &quot;&amp;email=&quot; + IF(ISBLANK( Member_Contact__c ), Member_Lead__r.Email,  Member_Contact__r.Email  )</formula>
    <label>Survey Participant URL</label>
    <type>Text</type>
</CustomField>