main/default/objects/Participant__c/fields/Survey_Reminder_Message__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reminder_Message__c</fullName>
    <label>Survey Reminder Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>