main/default/objects/Participant__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <description>Determines if the participant has already been sent a survey or not or if they have not yet answered the survey</description>
    <inlineHelpText>Determines if the participant has already been sent a survey or not or if they have not yet answered the survey</inlineHelpText>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>