main/default/objects/Participant__c/fields/Survey_Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>Survey_Thank_You_Message__c</fullName>
    <label>Survey Thank You Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>