main/default/objects/Participant__c/recordTypes/Create_New_Participant.recordType-meta.xml
<RecordType>
    <fullName>Create_New_Participant</fullName>
    <active>true</active>
    <label>Create New Participant</label>
</RecordType>