main/default/objects/Participant__c/recordTypes/Participant.recordType-meta.xml
<RecordType>
    <fullName>Participant</fullName>
    <active>true</active>
    <label>Participant</label>
</RecordType>